# rpg

./: .gitignore  README.md
docs/: gamemechanics.md  narrative.md  todo.md
include/: character.h  die.h  enums.h  item.h  weapon.h
src/: CMakeLists.txt  character.cpp  die.cpp  item.cpp  main.cpp  weapon.cpp
